# pico-gradient

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  font.h  main.c  platformio.ini  shell.nix  ssd1306.h  ws2812.pio.h
src/: CMakeLists.txt  gradient.c  main.c  ws2812.pio  ws2812.pio.h
